# PX4-Autopilot

./: CMakeLists.txt
src/Acados_MPC/: acados_ocp_quadcopter.json
src/Acados_MPC/c_generated_code/: Makefile  acados_solver_quadcopter.c  main_quadcopter  main_quadcopter.c
src/Acados_MPC/mpc_python/: quadcopter_model.py  quadcopter_model_closedloop.py
src/lib/: CMakeLists.txt
src/lib/ACADOS_C/: CMakeLists.txt
src/lib/ACADOS_C/Quadcopter_model/: quadcopter_closedloop.py  quadcopter_model.py  quadcopter_sim.py  utils.py
src/lib/ACADOS_C/c_generated_code/: Makefile  acados_sim_solver_Quadcopter_model_ode.c  acados_sim_solver_Quadcopter_model_ode.h  acados_sim_solver_quadcopter.c  acados_sim_solver_quadcopter.h  acados_solver.pxd  acados_solver_Quadcopter_model_ode.c  acados_solver_Quadcopter_model_ode.h  acados_solver_quadcopter.h  main_Quadcopter_model_ode  main_Quadcopter_model_ode.c  main_quadcopter  main_quadcopter.c  main_sim_Quadcopter_model_ode  main_sim_Quadcopter_model_ode.c  main_sim_quadcopter  main_sim_quadcopter.c
src/lib/ACADOS_C/c_generated_code/Quadcopter_model_ode_model/: Quadcopter_model_ode_expl_ode_fun.c  Quadcopter_model_ode_expl_vde_adj.c  Quadcopter_model_ode_expl_vde_forw.c  Quadcopter_model_ode_model.h
src/lib/ACADOS_C/c_generated_code/quadcopter_cost/: quadcopter_cost_y_e_hess.c  quadcopter_cost_y_fun.c  quadcopter_cost_y_fun_jac_ut_xt.c  quadcopter_cost_y_hess.c
src/lib/ACADOS_C/c_generated_code/quadcopter_model/: quadcopter_impl_dae_fun.c  quadcopter_model.h
src/lib/mpc_rate_control/: CMakeLists.txt  mpc_rate_solver.cpp  mpc_rate_solver.hpp  mpc_rate_solver_test.cpp
src/lib/mpc_rate_control/c_generated_code/: acados_solver_quadcopter.c
src/lib/mpc_rate_control/c_generated_code/quadcopter_cost/: quadcopter_cost.h  quadcopter_cost_y_0_hess.c  quadcopter_cost_y_e_fun_jac_ut_xt.c
src/lib/mpc_rate_control/c_generated_code/quadcopter_model/: quadcopter_impl_dae_fun_jac_x_xdot_u_z.c  quadcopter_impl_dae_jac_x_xdot_u_z.c
src/modules/mc_rate_control/: CMakeLists.txt  MulticopterRateControl.cpp  MulticopterRateControl.hpp
(+5 files in other folders)
